the new changes

--- a/vault.html
+++ b/vault.html
@@ -293,10 +293,10 @@
             </div>
 
             <label for="customRange1" class="form-label" style="margin-top: 30px;">Current Tax Rate: 50%</label>
-            <input type="range"  class="form-range banner-content" id="customRange1">
+            <input type="range" class="form-range banner-content" id="customRange1">
 
             <div style="margin-top: 20px;">
-               Claim Amount
+                Claim Amount
             </div>
             <div style="font-size: 12px; margin-top:5px;">
                 168.017pstn
@@ -309,7 +309,7 @@
                 5 PSTN
             </div>
 
-            
+
 
             <div style="margin-top: 10px;">
                 Nitro Amount:
@@ -320,7 +320,86 @@
 
         </div>
     </div>
+    <div class="banner-content" style="display: flex; align-items: center; justify-content: center; margin-top:50px;">
+        <div style="display:flex; width: 75%; justify-content: space-between; ">
+            <div
+                style="width: 320px; font-size: 19px; color:#fff; flex-direction: column; display:flex; justify-content: space-between; ">
+                <div style="display:flex; justify-content: center; flex-direction: column; align-items: center;">
+                    Approval
+                    <div style="display:flex; justify-content: space-between; margin-top: 10px;">
+                        <div class="form-floating mb-3" style="color:#000; font-size: 14px;">
+                            <input type="number" class="form-control" id="floatingInput" placeholder="name@example.com">
+                            <label for="floatingInput">Amount</label>
+                        </div>
+                        <div style="color:grey; margin-left: 20px; font-size: 12px;">
+                            Amount<div>
+                                23.33psn
+                            </div>
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-primary btn-sm"
+                        style="background-color:rgb(243, 121, 40); width:100%; height:40px">Approved</button>
+                </div>
 
+                <div
+                    style="display:flex; margin-top: 20px; justify-content: center; flex-direction: column; align-items: center;">
+                    Make Deposit
+                    <div style="display:flex; justify-content: space-between; margin-top: 10px;">
+                        <div class="form-floating mb-3" style="color:#000; font-size: 14px;">
+                            <input type="number" class="form-control" id="floatingInput" placeholder="name@example.com">
+                            <label for="floatingInput">Amount</label>
+                        </div>
+                        <div style="color:grey; margin-left: 20px; font-size: 12px;">
+                            Make Deposit<div>
+                                23.33psn
+                            </div>
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-primary btn-sm"
+                        style="background-color:rgb(243, 121, 40); width:100%; height:40px"> Make Deposit</button>
+                </div>
+
+                <div
+                    style="display:flex; margin-top: 20px; justify-content: center; flex-direction: column; align-items: center;">
+                    TestNet Tool
+                    <div style="display:flex; justify-content: space-between; margin-top: 10px;">
+                        <div class="form-floating mb-3" style="color:#000; font-size: 14px;">
+                            <input type="number" class="form-control" id="floatingInput" placeholder="name@example.com">
+                            <label for="floatingInput">Amount</label>
+                        </div>
+                        <div style="color:grey; margin-left: 20px; font-size: 12px;">
+                            TestNet Tool<div>
+                                23.33psn
+                            </div>
+                        </div>
+                    </div>
+                    <button type="button" class="btn btn-primary btn-sm"
+                        style="background-color:rgb(243, 121, 40); width:100%; height:40px"> TestNet Tool</button>
+                </div>
+            </div>
+            <div style="width: 320px; text-align: start; color: grey">
+                <div>
+                    Deposit
+                    <div style="color:#fff">
+                        2,079.459450
+                    </div>
+                </div>
+                <div style="margin-top:10px">
+                    Available
+                    <div style="color:#fff">
+                        2,079.459450psn
+                    </div>
+                </div>
+                <div style="margin-top:10px">
+                    Claim
+                    <div style="color:#fff">
+                        2,079.459450psn
+                    </div>
+                </div>
+            </div>
+        </div>
+
+    </div>
     </div>
     </section>
 
