the new changes 2

--- a/vault.html
+++ b/vault.html
@@ -377,7 +377,7 @@
                         style="background-color:rgb(243, 121, 40); width:100%; height:40px"> TestNet Tool</button>
                 </div>
             </div>
-            <div style="width: 320px; text-align: start; color: grey">
+            <div style="width: 320px; text-align: start; font-size: x-small; color: grey">
                 <div>
                     Deposit
                     <div style="color:#fff">
