--- a/vault.html
+++ b/vault.html
@@ -320,7 +320,7 @@
 
         </div>
     </div>
-    <div class="banner-content" style="display: flex; align-items: center; justify-content: center; margin-top:50px;">
+    <div class="banner-content" style="display: flex; align-items: center; padding-bottom: 100px; justify-content: center; margin-top:50px;">
         <div style="display:flex; width: 75%; justify-content: space-between; ">
             <div
                 style="width: 320px; font-size: 19px; color:#fff; flex-direction: column; display:flex; justify-content: space-between; ">
@@ -331,7 +331,7 @@
                             <input type="number" class="form-control" id="floatingInput" placeholder="name@example.com">
                             <label for="floatingInput">Amount</label>
                         </div>
-                        <div style="color:grey; margin-left: 20px; font-size: 12px;">
+                        <div style="color:grey; margin-left: 20px; font-size: 12px; text-align: start;">
                             Amount<div>
                                 23.33psn
                             </div>
@@ -349,7 +349,7 @@
                             <input type="number" class="form-control" id="floatingInput" placeholder="name@example.com">
                             <label for="floatingInput">Amount</label>
                         </div>
-                        <div style="color:grey; margin-left: 20px; font-size: 12px;">
+                        <div style="color:grey; margin-left: 20px; font-size: 12px; text-align: start;">
                             Make Deposit<div>
                                 23.33psn
                             </div>
@@ -367,7 +367,7 @@
                             <input type="number" class="form-control" id="floatingInput" placeholder="name@example.com">
                             <label for="floatingInput">Amount</label>
                         </div>
-                        <div style="color:grey; margin-left: 20px; font-size: 12px;">
+                        <div style="color:grey; margin-left: 20px; font-size: 12px; text-align: start;">
                             TestNet Tool<div>
                                 23.33psn
                             </div>
