the changes to the website

--- a/about.html
+++ b/about.html
@@ -82,7 +82,7 @@
                         <li><a href="/index.html#tokenomics" class="scrolls">Tokenomics </a></li>
                         <li><a href="#" class="scrolls">Alpha Site</a></li>
                         <li><a href="#" class="scrolls">Omega13</a></li>
-                        <li><a href="/road_map.html" class="scrolls">Road map</a></li>
+                        <li><a href="index.html#road" class="scrolls">Road map</a></li>
                         <li><a href="/index.html#team" class="scrolls">Team</a></li>
                         <li><a href="/index.html#contact" class="scrolls">Contact us</a></li>
                         <li><a href="dashboard.html" class="scrolls">Site Dapp</a></li>
