--- a/index.html
+++ b/index.html
@@ -181,7 +181,7 @@
               </a>
 
             </li>
-            <li><a href="index.html#road#document" class="scrolls" style="display:flex; align-items: center;">
+            <li><a href="index.html#document" class="scrolls" style="display:flex; align-items: center;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                   class="bi bi-newspaper" viewBox="0 0 16 16">
                   <path
