the new changes

--- a/vault.html
+++ b/vault.html
@@ -50,7 +50,7 @@
         .styled-table {
             border-collapse: collapse;
             margin: 25px 0;
-            font-size: 0.9em;
+            font-size: 7px;
             font-family: sans-serif;
             width: 100%;
             box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
@@ -65,7 +65,7 @@
         }
 
         .styled-table thead tr {
-            background-color: #009879;
+            background-color: #000;
             color: #ffffff;
             text-align: left;
         }
