the alpha dashboard

--- a/vault.html
+++ b/vault.html
@@ -85,12 +85,23 @@
         }
 
         .styled-table tbody tr:last-of-type {
-            border-bottom: 2px solid #009879;
+            border-bottom: 2px solid #000;
         }
 
         .styled-table tbody tr.active-row {
             font-weight: bold;
-            color: #009879;
+            color: #000;
+        }
+        
+@media(min-width:700px) {
+    .styled-table {
+            border-collapse: collapse;
+            margin: 25px 0;
+            font-size: 0.8em;
+            font-family: sans-serif;
+            width: 100%;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.15);
+            table-layout: fixed;
         }
     </style>
 
