--- a/about.html
+++ b/about.html
@@ -67,7 +67,7 @@
         <div class="container">
             <nav id="navigation1" class="navigation">
                 <div class="nav-header">
-                    <a class="nav-brand" href="index-2.html">
+                    <a class="nav-brand" href="index-2.html" style="width:50px">
                         <img src="assets/img/logo/footerlogo.png" alt="">
                     </a>
                     <div class="nav-toggle"></div>
