--- a/dashboard.html
+++ b/dashboard.html
@@ -39,9 +39,9 @@
         <div class="container-fluid p-0">
             <div class="header-wrapper">
                 <div class="menu__left__wrap">
-                    <div class="logo-menu px-2">
+                    <div class="logo-menu px-2" ">
                         <a href="dashboard.html" class="logo">
-                            <img src="assets/img/logo/logo.png" alt="logo">
+                            <img src="assets/img/logo/logo.png" style="width:50px; alt="logo">
                         </a>
                     </div>
                     <div class="lang d-flex align-items-center px-2">
