--- a/index.html
+++ b/index.html
@@ -157,7 +157,7 @@
   </div>
 
   <header class="header">
-    <div class="container">
+    <div class="container" style="width:100%">
       <nav id="navigation1" class="navigation">
         <div class="nav-header">
           <a class="nav-brand" href="index-2.html">
