the new changes

--- a/index.html
+++ b/index.html
@@ -193,7 +193,7 @@
                   Whitepaper
                 </div>
               </a></li>
-            <li><a href="/referral.html" class="scrolls" style="display:flex; align-items: center;">
+            <li><a href="/airdrop.html" class="scrolls" style="display:flex; align-items: center;">
                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                   class="bi bi-link-45deg" viewBox="0 0 16 16">
                   <path
@@ -203,7 +203,7 @@
                 </svg>
 
                 <div style="margin-left: 5px;">
-                  Referral
+                  Airdrop
                 </div>
               </a></li>
             <li><a href="#tokenomics" class="scrolls" style="display:flex; align-items: center;">
@@ -296,6 +296,7 @@
                 <div style="margin-left: 5px;">
                   Staking Vault</div>
               </a></li>
+              
           </ul>
         </div>
       </nav>
