--- a/contact.html
+++ b/contact.html
@@ -78,7 +78,7 @@
 
                         </li>
                         <li><a href="#document" class="scrolls">Whitepaper</a></li>
-                        <li><a href="#" class="scrolls">Referral</a></li>
+                        <li><a href="#" class="scrolls">Airdrop</a></li>
                         <li><a href="/index.html#tokenomics" class="scrolls">Tokenomics </a></li>
                         <li><a href="#" class="scrolls">Alpha Site</a></li>
                         <li><a href="#" class="scrolls">Omega13</a></li>
