--- a/nft.html
+++ b/nft.html
@@ -216,7 +216,7 @@
                                     Whitepaper
                                 </div>
                             </a></li>
-                        <li><a href="/referral.html" class="scrolls" style="display:flex; align-items: center;">
+                        <li><a href="/airdrop.html" class="scrolls" style="display:flex; align-items: center;">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-link-45deg" viewBox="0 0 16 16">
                                     <path
@@ -226,7 +226,7 @@
                                 </svg>
 
                                 <div style="margin-left: 5px;">
-                                    Referral
+                                    Airdrop
                                 </div>
                             </a></li>
                         <li><a href="/index.html#tokenomics" class="scrolls" style="display:flex; align-items: center;">
