--- a/staking.html
+++ b/staking.html
@@ -112,7 +112,7 @@
                                     Whitepaper
                                 </div>
                             </a></li>
-                        <li><a href="/referral.html" class="scrolls" style="display:flex; align-items: center;">
+                        <li><a href="/airdrop.html" class="scrolls" style="display:flex; align-items: center;">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-link-45deg" viewBox="0 0 16 16">
                                     <path
@@ -122,7 +122,7 @@
                                 </svg>
 
                                 <div style="margin-left: 5px;">
-                                    Referral
+                                    Airdrop
                                 </div>
                             </a></li>
                         <li><a href="/index.html#tokenomics" class="scrolls" style="display:flex; align-items: center;">
@@ -256,7 +256,7 @@
             <div>0 <span style="color:grey">BUSD</span></div>
         </div>
             <div style="width:250px; display: flex; flex-direction: column; justify-content: center;  border-radius:19px; height:120px; padding:20px; background-color: black; margin-right: 30px; margin-bottom: 30px; margin-top:10px;"">
-                <div style=" font-weight: 700; font-size: 20px;">REFERRAL BALANCE</div>
+                <div style=" font-weight: 700; font-size: 20px;">Airdrop BALANCE</div>
 <div>0 <span style="color:grey">BUSD</span></div>
 </div>
             </div>
