the new changes

--- a/index.html
+++ b/index.html
@@ -296,10 +296,14 @@
                 <div style="margin-left: 5px;">
                   Staking Vault</div>
               </a></li>
-              
-          </ul>
+            <li>
+              <div style="display: flex; align-items: center; justify-content:center ; margin-bottom: 20px; margin-top: 20px;">
+                <button type="button" class="btn btn-primary">Connect Button</button>
+            </li>
         </div>
-      </nav>
+        </ul>
+    </div>
+    </nav>
     </div>
   </header>
   <div id="particles-js">
