--- a/airdrop.html
+++ b/airdrop.html
@@ -666,6 +666,10 @@ DEMO
                                 <div style="margin-left: 5px;">
                                     Staking Vault</div>
                             </a></li>
+                              <li>
+              <div style="display: flex; align-items: center; justify-content:center ; margin-bottom: 20px; margin-top: 20px;">
+                <button type="button" class="btn btn-primary">Connect Button</button>
+            </li>
                     </ul>
                 </div>
             </nav>
