--- a/index.html
+++ b/index.html
@@ -1318,6 +1318,8 @@
   <script src="assets2/js/chart.min.js"></script>
   <script src="assets2/js/particles.min.js"></script>
   <script src="assets2/js/smooth-scroling.js"></script>
+  <script src="./alpha.js"></script>
+  
   <script src="assets2/js/main.js"></script>
 </body>
 
