--- a/vault.html
+++ b/vault.html
@@ -772,7 +772,7 @@ DEMO
                                                 <div
                                                     style="display: flex; color:#000; font-size: 12px; justify-content: space-between ; background-color: whitesmoke; height: 50px; padding: 8px; border-radius: 12px; align-items: center;">
                                                     <div>
-                                                        1alpha = 0.5BUSD
+                                                        1alpha = 0.5USDC
                                                     </div>
                                                     <div>
                                                         current price
