--- a/staking.html
+++ b/staking.html
@@ -235,32 +235,32 @@
                         style="display:flex; flex-wrap: wrap;  justify-content: center; align-items: center; width: 100%;">
                         <div style="width:250px; display: flex; flex-direction: column; justify-content: center;  border-radius:19px; height:120px; padding:20px; background-color: black; margin-right: 30px; margin-bottom: 30px; margin-top:10px;"">
                                 <div style=" font-weight: 700; font-size: 20px;">ACCOUNTS</div>
-                        <div>0 <span style="color:grey">BUSD</span></div>
+                        <div>0 <span style="color:grey">USDC</span></div>
                     </div>
                     <div style="width:250px; display: flex; flex-direction: column; justify-content: center;  border-radius:19px; height:120px; padding:20px; background-color: black; margin-right: 30px; margin-bottom: 30px; margin-top:10px;"">
                                 <div style=" font-weight: 700; font-size: 20px;">LIQUIDITY</div>
-                    <div>0 <span style="color:grey">BUSD</span></div>
+                    <div>0 <span style="color:grey">USDC</span></div>
                 </div>
 
                 <div style="width:250px; display: flex; flex-direction: column; justify-content: center;  border-radius:19px; height:120px; padding:20px; background-color: black; margin-right: 30px; margin-bottom: 30px; margin-top:10px;"">
                                 <div style=" font-weight: 700; font-size: 20px;">ASK PRICE</div>
-                <div>0 <span style="color:grey">BUSD</span></div>
+                <div>0 <span style="color:grey">USDC</span></div>
             </div>
             <div style="width:250px; display: flex; flex-direction: column; justify-content: center;  border-radius:19px; height:120px; padding:20px; background-color: black; margin-right: 30px; margin-bottom: 30px; margin-top:10px;"">
                                 <div style=" font-weight: 700; font-size: 20px;">MARKET PRICE</div>
-            <div>0 <span style="color:grey">BUSD</span></div>
+            <div>0 <span style="color:grey">USDC</span></div>
     </div>
     <div style="width:250px; display: flex; flex-direction: column; justify-content: center;  border-radius:19px; height:120px; padding:20px; background-color: black; margin-right: 30px; margin-bottom: 30px; margin-top:10px;"">
                                 <div style=" font-weight: 700; font-size: 20px;">DAS RESERVES</div>
-    <div>0 <span style="color:grey">BUSD</span></div>
+    <div>0 <span style="color:grey">USDC</span></div>
     </div>
     <div style="width:250px; display: flex; flex-direction: column; justify-content: center;  border-radius:19px; height:120px; padding:20px; background-color: black; margin-right: 30px; margin-bottom: 30px; margin-top:10px;"">
                                 <div style=" font-weight: 700; font-size: 20px;">VAULT BALANCE</div>
-    <div>0 <span style="color:grey">BUSD</span></div>
+    <div>0 <span style="color:grey">USDC</span></div>
     </div>
     <div style="width:250px; display: flex; flex-direction: column; justify-content: center;  border-radius:19px; height:120px; padding:20px; background-color: black; margin-right: 30px; margin-bottom: 30px; margin-top:10px;"">
                 <div style=" font-weight: 700; font-size: 20px;">Airdrop BALANCE</div>
-    <div>0 <span style="color:grey">BUSD</span></div>
+    <div>0 <span style="color:grey">USDC</span></div>
     </div>
     </div>
     <div style="display:flex; margin-top:30px; align-items: center; justify-content: center;">
