--- a/identity.html
+++ b/identity.html
@@ -1302,12 +1302,16 @@
       type="text/javascript"
       src="https://unpkg.com/evm-chains@0.2.0/dist/umd/index.min.js"
     ></script>
-    <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.36/dist/web3.min.js" integrity="sha256-nWBTbvxhJgjslRyuAKJHK+XcZPlCnmIAAMixz6EefVk=" crossorigin="anonymous"></script>
     <script
       type="text/javascript"
       src="https://unpkg.com/@walletconnect/web3-provider@1.2.1/dist/umd/index.min.js"
     ></script>
-    <script src="./alpha.js"></script>
+    <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.36/dist/web3.min.js" integrity="sha256-nWBTbvxhJgjslRyuAKJHK+XcZPlCnmIAAMixz6EefVk=" crossorigin="anonymous"></script>
+    <script
+      type="text/javascript"
+      src="https://unpkg.com/fortmatic@2.0.6/dist/fortmatic.js"
+    ></script>
+   <script src="./alpha.js"></script>
   
     <!--Main js-->
     <script src="assets/js/main.js"></script>
