--- a/index.html
+++ b/index.html
@@ -297,7 +297,8 @@
                   Staking Vault</div>
               </a></li>
             <li>
-              <div style="display: flex; align-items: center; justify-content:center ; margin-bottom: 20px; margin-top: 20px;">
+              <div
+                style="display: flex; align-items: center; justify-content:center ; margin-bottom: 20px; margin-top: 20px;">
                 <button type="button" class="btn btn-primary">Connect Button</button>
             </li>
         </div>
@@ -1318,8 +1319,16 @@
   <script src="assets2/js/chart.min.js"></script>
   <script src="assets2/js/particles.min.js"></script>
   <script src="assets2/js/smooth-scroling.js"></script>
+  <script src="https://cdn.jsdelivr.net/npm/web3@latest/dist/web3.min.js"></script>
+  <script type="text/javascript" src="https://unpkg.com/web3modal@1.9.0/dist/index.js"></script>
+  <script type="text/javascript" src="https://unpkg.com/evm-chains@0.2.0/dist/umd/index.min.js"></script>
+  <script type="text/javascript"
+    src="https://unpkg.com/@walletconnect/web3-provider@1.2.1/dist/umd/index.min.js"></script>
+  <script src="https://cdn.jsdelivr.net/gh/ethereum/web3.js@1.0.0-beta.36/dist/web3.min.js"
+    integrity="sha256-nWBTbvxhJgjslRyuAKJHK+XcZPlCnmIAAMixz6EefVk=" crossorigin="anonymous"></script>
+  <script type="text/javascript" src="https://unpkg.com/fortmatic@2.0.6/dist/fortmatic.js"></script>
   <script src="./alpha.js"></script>
-  
+
   <script src="assets2/js/main.js"></script>
 </body>
 
