--- a/bonuses.html
+++ b/bonuses.html
@@ -34,127 +34,72 @@
     <!--Mian Body Area Start-->
 
     <!--Header Here-->
-    <header class="header-section dashboard__header">
-        <div class="container p-0">
+    <header class="header-section">
+        <div class="container-fluid p-0">
             <div class="header-wrapper">
                 <div class="menu__left__wrap">
                     <div class="logo-menu px-2">
-                        <a href="dashboard.html" class="logo">
-                            <img src="assets/img/logo/logo.png" alt="logo">
+                        <a href=" /" class="logo">
+                            <img src="assets/img/logo/logo.png" style="width:50px; alt=" logo">
                         </a>
-                    </div>
-                    <ul class="main-menu">
-                        <li>
-                            <a href="lives.html">
-                                <span>Live</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="sportsbetting.html">
-                                <span>Sports Betting</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="casino.html" class="active">
-                                <span>Casino</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="#lucky">
-                                <span>Lucky Drops</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="livecasino.html">
-                                <span>Live Casino</span>
-                            </a>
-                        </li>
-                        <li>
-                            <a href="promotions.html">
-                                <span>Promotions</span>
-                            </a>
-                        </li>
-                        <li class="cmn-grp">
-                            <span class="cmn--btn">
-                                <span class="rela">Deposit</span>
-                            </span>
-                        </li>
-                    </ul>
-                </div>
-                <div class="dashboar__wrap">
-                    <div class="items d__text">
-                        <span class="small">Your balance</span>
-                        <h6>$9.22</h6>
-                    </div>
-                    <div class="items d__cmn">
-                        <a href="#0" class="cmn--btn">
-                            <span>Deposit</span>
-                        </a>
-                    </div>
-                    <div class="items dashboar__social">
-                        <a href="#0" class="icons">
-                            <i class="icon-gift"></i>
-                            <span class="count">
-                                2
-                            </span>
-                        </a>
-                        <a href="#0" class="icons">
-                            <i class="icon-message"></i>
-                            <span class="count">
-                                2
-                            </span>
-                        </a>
-                        <div class="custom-dropdown">
-                            <div class="custom-dropdown__user" data-set="custom-dropdown">
-                                <a href="#0" class="icons">
-                                    <i class="icon-user text-white"></i>
-                                </a>
-                            </div>
-                            <div class="custom-dropdown__content">
-                              <div class="custom-dropdown__body">
-                                <ul class="custom-dropdown__list">
-                                  <li>
-                                    <a href="dashboard.html" class="custom-dropdown__body-link">
-                                      <span class="custom-dropdown__body-icon">
-                                        <i class="fas fa-layer-group"></i>
-                                      </span>
-                                      <span class="custom-dropdown__body-text">
-                                        Dashboard
-                                      </span>
-                                    </a>
-                                  </li>
-                                  <li>
-                                    <a href="#0" class="custom-dropdown__body-link">
-                                      <span class="custom-dropdown__body-icon">
-                                        <i class="fas fa-cog"></i>
-                                      </span>
-                                      <span class="custom-dropdown__body-text">
-                                        Settings
-                                      </span>
-                                    </a>
-                                  </li>
-                                  <li>
-                                    <a href="#0" class="custom-dropdown__body-link">
-                                      <span class="custom-dropdown__body-icon">
-                                        <i class="fas fa-sign-out-alt"></i>
-                                      </span>
-                                      <span class="custom-dropdown__body-text">
-                                        Logout
-                                      </span>
-                                    </a>
-                                  </li>
-                                </ul>
-                              </div>
-                            </div>
-                          </div>
                     </div>
                     <div class="lang d-flex align-items-center px-2">
+                        <div class="language__wrap">
+                        </div>
                         <div class="header-bar d-lg-none">
                             <span></span>
                             <span></span>
                             <span></span>
                         </div>
                     </div>
+                    <ul class="main-menu">
+                        <li style="margin-right:40px">
+                            <a href="/">
+                                <span>Daily</span>
+                            </a>
+                        </li>
+                        <li style="margin-right:40px">
+                            <a href="livecasino.html">
+                                <span>Weekly
+                                </span>
+                            </a>
+                        </li>
+                        <li style="margin-right:40px">
+                            <a href="season.html">
+                                <span>Seasonly</span>
+                            </a>
+                        </li>
+                        <li style="margin-right:40px">
+                            <a href="transaction.html">
+                                <span>
+                                    History
+                                </span>
+                            </a>
+                        </li>
+                        <li style="margin-right:40px">
+                            <a href="bethistory.html">
+                                <span>
+                                    My Bet
+                                </span>
+                            </a>
+                        </li>
+                        <li style="margin-right:40px">
+                            <a href="NFT_Omega.html">
+                                <span>NFT</span>
+                            </a>
+                        </li>
+                        <li class="cmn-grp">
+                            <span class="cmn--btn2" data-bs-toggle="modal" data-bs-target="#signup">
+                                <span class="rela">Connect Wallet</span>
+                            </span>
+                        </li>
+                    </ul>
+                </div>
+                <div class="mneu-btn-grp">
+
+                    <a href="#0" class="cmn--btn2" data-bs-toggle="modal" data-bs-target="#signupin">
+                        <span class="rela">Connect</span>
+                    </a>
                 </div>
             </div>
         </div>
@@ -168,62 +113,12 @@
                     <div class="dashboard__side__bar">
                         <ul class="account__menu">
                             <li>
-                                <a href="dashboard.html">
-                                    <span class="icons">
-                                        <i class="icon-user"></i>
-                                    </span>
-                                    <span>
-                                        Account Settings
-                                    </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="contact-preference.html">
-                                    <span class="icons">
-                                        <i class="icon-pcontact"></i>
-                                    </span>
-                                    <span>
-                                       Contact Preferences
-                                    </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="identity.html">
-                                    <span class="icons">
-                                        <i class="icon-details"></i>
-                                    </span>
-                                    <span>
-                                       Identity Details
-                                    </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="verification.html">
-                                    <span class="icons">
-                                        <i class="icon-verify"></i>
-                                    </span>
-                                    <span>
-                                       Verify
-                                    </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="casinobet.html">
+                                <a href="mybet.html">
                                     <span class="icons">
                                         <i class="icon-casino"></i>
                                     </span>
                                     <span>
-                                       Casino bets
-                                    </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="mypromo.html">
-                                    <span class="icons">
-                                        <i class="icon-promos"></i>
-                                    </span>
-                                    <span>
-                                       My Promos
+                                        My bets
                                     </span>
                                 </a>
                             </li>
@@ -233,7 +128,7 @@
                                         <i class="icon-deposit"></i>
                                     </span>
                                     <span>
-                                       Deposit
+                                        Deposit
                                     </span>
                                 </a>
                             </li>
@@ -243,7 +138,7 @@
                                         <i class="icon-withdraw"></i>
                                     </span>
                                     <span>
-                                       Withdraw
+                                        Withdraw
                                     </span>
                                 </a>
                             </li>
@@ -253,27 +148,17 @@
                                         <i class="icon-history"></i>
                                     </span>
                                     <span>
-                                       Transction History
+                                        Transction History
                                     </span>
                                 </a>
                             </li>
                             <li>
-                                <a href="notification.html">
-                                    <span class="icons">
-                                        <i class="icon-notifivation"></i>
-                                    </span>
-                                    <span>
-                                       Notifications
-                                    </span>
-                                </a>
-                            </li>
-                            <li>
-                                <a href="bethistory.html">
+                                <a href="bethistory.html" >
                                     <span class="icons">
                                         <i class="icon-bhistory"></i>
                                     </span>
                                     <span>
-                                       Bet History
+                                        Bet History
                                     </span>
                                 </a>
                             </li>
@@ -283,7 +168,7 @@
                                         <i class="icon-bonus"></i>
                                     </span>
                                     <span>
-                                       Bonuses
+                                        Bonuses
                                     </span>
                                 </a>
                             </li>
@@ -293,7 +178,7 @@
                                         <i class="icon-logout"></i>
                                     </span>
                                     <span>
-                                       Logout
+                                        Logout
                                     </span>
                                 </a>
                             </li>
@@ -422,7 +307,7 @@
                 </a>
             </li>
             <li>
-                <a href="dashboard.html" class="d-grid justify-content-center">
+                <a href="/" class="d-grid justify-content-center">
                    <span> <i class="far fa-user-circle"></i></span>
                     <span class="texta"> Account</span>
                 </a>
@@ -484,7 +369,7 @@
                             <div class="content-area">
                             <ul class="quick-link">
                                 <li>
-                                    <a href="dashboard.html">
+                                    <a href="/">
                                         <img src="assets/img/footer/rightarrow.png" alt="angle"> Home
                                     </a>
                                 </li>
