--- a/staking.html
+++ b/staking.html
@@ -153,7 +153,7 @@
                                     Alpha Site
                                 </div>
                             </a></li>
-                        <li><a href="dashboard.html" class="scrolls" style="display:flex; align-items: center;">
+                        <li><a href="/" class="scrolls" style="display:flex; align-items: center;">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-diagram-3-fill" viewBox="0 0 16 16">
                                     <path fill-rule="evenodd"
@@ -195,7 +195,7 @@
                                 <div style="margin-left: 5px;">
                                     Contact us</div>
                             </a></li>
-                        <li><a href="dashboard.html" class="scrolls" style="display:flex; align-items: center;">
+                        <li><a href="/" class="scrolls" style="display:flex; align-items: center;">
                                 <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor"
                                     class="bi bi-speedometer" viewBox="0 0 16 16">
                                     <path
