--- a/verification.html
+++ b/verification.html
@@ -39,7 +39,7 @@
             <div class="header-wrapper">
                 <div class="menu__left__wrap">
                     <div class="logo-menu px-2">
-                        <a href="dashboard.html" class="logo">
+                        <a href="/" class="logo">
                             <img src="assets/img/logo/logo.png" alt="logo">
                         </a>
                     </div>
@@ -114,7 +114,7 @@
                               <div class="custom-dropdown__body">
                                 <ul class="custom-dropdown__list">
                                   <li>
-                                    <a href="dashboard.html" class="custom-dropdown__body-link">
+                                    <a href="/" class="custom-dropdown__body-link">
                                       <span class="custom-dropdown__body-icon">
                                         <i class="fas fa-layer-group"></i>
                                       </span>
@@ -168,7 +168,7 @@
                     <div class="dashboard__side__bar">
                         <ul class="account__menu">
                             <li>
-                                <a href="dashboard.html">
+                                <a href="/">
                                     <span class="icons">
                                         <i class="icon-user"></i>
                                     </span>
@@ -450,7 +450,7 @@
                 </a>
             </li>
             <li>
-                <a href="dashboard.html" class="d-grid justify-content-center">
+                <a href="/" class="d-grid justify-content-center">
                    <span> <i class="far fa-user-circle"></i></span>
                     <span class="texta"> Account</span>
                 </a>
@@ -512,7 +512,7 @@
                             <div class="content-area">
                             <ul class="quick-link">
                                 <li>
-                                    <a href="dashboard.html">
+                                    <a href="/">
                                         <img src="assets/img/footer/rightarrow.png" alt="angle"> Home
                                     </a>
                                 </li>
