--- a/betslipcheck.html
+++ b/betslipcheck.html
@@ -40,7 +40,7 @@
             <div class="header-wrapper">
                 <div class="menu__left__wrap">
                     <div class="logo-menu px-2">
-                        <a href="dashboard.html" class="logo">
+                        <a href="/" class="logo">
                             <img src="assets/img/logo/logo.png" alt="logo">
                         </a>
                     </div>
@@ -27955,7 +27955,7 @@
                 </a>
             </li>
             <li>
-                <a href="dashboard.html" class="d-grid justify-content-center">
+                <a href="/" class="d-grid justify-content-center">
                    <span> <i class="far fa-user-circle"></i></span>
                     <span class="texta"> Account</span>
                 </a>
