--- a/contact.html
+++ b/contact.html
@@ -87,7 +87,7 @@
                         <li><a href="index-3.html#road" class="scrolls">Road map</a></li>
                         <li><a href="index-3.html#team" class="scrolls">Team</a></li>
                         <li><a href="index-3.html#contact" class="scrolls">Contact us</a></li>
-                        <li><a href="dashboard.html" class="scrolls">Site Dapp</a></li>
+                        <li><a href="/" class="scrolls">Site Dapp</a></li>
                     </ul>
                 </div>
             </nav>
