--- a/promotions.html
+++ b/promotions.html
@@ -39,7 +39,7 @@
             <div class="header-wrapper">
                 <div class="menu__left__wrap">
                     <div class="logo-menu px-2">
-                        <a href="dashboard.html" class="logo">
+                        <a href="/" class="logo">
                             <img src="assets/img/logo/logo.png" alt="logo">
                         </a>
                     </div>
@@ -321,7 +321,7 @@
                 </a>
             </li>
             <li>
-                <a href="dashboard.html" class="d-grid justify-content-center">
+                <a href="/" class="d-grid justify-content-center">
                    <span> <i class="far fa-user-circle"></i></span>
                     <span class="texta"> Account</span>
                 </a>
@@ -384,7 +384,7 @@
                             <div class="content-area">
                             <ul class="quick-link">
                                 <li>
-                                    <a href="dashboard.html">
+                                    <a href="/">
                                         <img src="assets/img/footer/rightarrow.png" alt="angle"> Home
                                     </a>
                                 </li>
