--- a/sportsbetting.html
+++ b/sportsbetting.html
@@ -39,7 +39,7 @@
             <div class="header-wrapper">
                 <div class="menu__left__wrap">
                     <div class="logo-menu px-2">
-                        <a href="dashboard.html" class="logo">
+                        <a href="/" class="logo">
                             <img src="assets/img/logo/logo.png" alt="logo">
                         </a>
                     </div>
@@ -68,7 +68,7 @@
                     </div>
                     <ul class="main-menu">
                         <li>
-                            <a href="dashboard.html">
+                            <a href="/">
                                 <span>Vault ROI</span>
                             </a>
                         </li>
@@ -28448,7 +28448,7 @@
                 </a>
             </li>
             <li>
-                <a href="dashboard.html" class="d-grid justify-content-center">
+                <a href="/" class="d-grid justify-content-center">
                    <span> <i class="far fa-user-circle"></i></span>
                     <span class="texta"> Account</span>
                 </a>
