--- a/index.html
+++ b/index.html
@@ -34,12 +34,12 @@
     <!-- <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.1/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-4bw+/aepP/YC94hEpVNVgiZdgIC5+VKNBQNGCHeKRQN+PtmoHDEXuppvnDJzQIu9" crossorigin="anonymous"> -->
 </head>
 
-<body onload="Connect()">
+<body onload="fetchApi('home');">
     <!--Mian Body Area Start-->
     <!--Mian Body Area Start-->
 
     <!--Header Here-->
-    <header class="header-section">
+    <header class="header-section" onload="Connect()">
         <div class="container-fluid p-0">
             <div class="header-wrapper">
                 <div class="menu__left__wrap">
